[package]
name = "imxrt-uart-panic"
authors = ["Finomnis <finomnis@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Finomnis/imxrt-uart-panic"
description = "Panic handler for i.MX RT that reports to UART."
keywords = ["imxrt", "embedded", "panic"]
categories = ["embedded", "no-std"]

[dependencies]
imxrt-hal = { version = "0.5.3", default-features = false }
imxrt-ral = "0.5.3"
cortex-m = "0.7.7"
nb = "1.1.0"
embedded-hal = "0.2.7"

[dev-dependencies]
teensy4-bsp = { version = "0.4.4", features = ["rt"] }
teensy4-panic = { version = "0.2.3", default-features = false }
rtic = { version = "2.0.1", features = ["thumbv7-backend"] }
imxrt-log = { version = "0.1.1", default-features = false, features = [
    "log",
    "lpuart",
] }
log = "0.4.20"
