[package]
name = "imxrt-uart-panic"
authors = ["Finomnis <finomnis@gmail.com>"]
version = "0.1.2"
rust-version = "1.68"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/imxrt-rs/imxrt-uart-panic"
description = "Panic handler for i.MX RT that reports to UART."
keywords = ["imxrt", "embedded", "panic"]
categories = ["embedded", "no-std"]

exclude = ["/.gitignore", "/.github/", "/.vscode/"]

[features]
default = []

# Do not use; internally required for Github CI
_ci = ["imxrt-ral/imxrt1062"]

[dependencies]
imxrt-hal = { version = "0.5.5", default-features = false }
imxrt-ral = "0.5.3"
cortex-m = "0.7.7"
embedded-io = "0.6.1"

[dev-dependencies]
teensy4-bsp = { version = "0.5.0", features = ["rt"] }
teensy4-panic = { version = "0.2.3", default-features = false }
rtic = { version = "2.1.1", features = ["thumbv7-backend"] }
imxrt-log = { version = "0.1.1", default-features = false, features = [
    "log",
    "lpuart",
] }
log = "0.4.20"

# Allow docsrs options
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
